--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,12 +13,18 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "default-passive-events": "^2.0.0",
+    "express": "^4.18.1",
+    "highlight.js": "^11.6.0",
     "less": "^4.1.3",
     "mock": "^0.1.1",
     "pinia": "^2.0.21",
     "postcss": "^8.4.16",
     "postcss-pxtorem": "5.1.1",
-    "vant": "^3.6.1",
+    "socket.io": "4.0.0",
+    "socket.io-client": "4.0.0",
+    "unplugin-vue-define-options": "^0.11.2",
+    "vant": "4.0.0-rc.0",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
